force-app/main/default/objects/Title_Detail__c/Title_Detail__c.object-meta.xml
<CustomObject>
    <label>Title Detail</label>
    <nameField>
        <displayFormat>TD-{00000000}</displayFormat>
        <label>Title Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>