force-app/main/default/objects/Title_Detail__c/fields/Estate_Type__c.field-meta.xml
<CustomField>
    <fullName>Estate_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Estate type</description>
    <label>Estate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESTATE_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_CROWN</fullName>
                <label>Crown</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_EASEMENT_ONLY</fullName>
                <label>Easement Only</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_FEE_SIMPLE</fullName>
                <label>Freehold</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_LEASEHOLD</fullName>
                <label>Leasehold</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_LIFE_ESTATE</fullName>
                <label>Life Estate</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_MINERALS</fullName>
                <label>Minerals</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_PERPETUAL_LEASEHOLD</fullName>
                <label>Perpetual Leasehold</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_REMAINDER_ESTATE</fullName>
                <label>Remainder Estate</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_SHARE_TITLE</fullName>
                <label>Share Title</label>
            </value>
            <value>
                <fullName>ESTATE_TYPE_OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>