force-app/main/default/objects/Title_Detail__c/fields/Expire_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Represents the expiration time of the title search.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>