force-app/main/default/objects/Title_Detail__c/fields/Loan_Application_Property__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Property__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Reference of Loan application property</description>
    <label>Loan Application Property</label>
    <referenceTo>LoanApplicationProperty</referenceTo>
    <relationshipLabel>Title Details</relationshipLabel>
    <relationshipName>Title_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>