force-app/main/default/objects/Title_Detail__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Property Domain</complianceGroup>
    <description>Property ownership details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>