force-app/main/default/objects/Title_Detail__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of Residential Loan Application</description>
    <label>Loan Application Id</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Title Details</relationshipLabel>
    <relationshipName>Title_Details</relationshipName>
    <type>Lookup</type>
</CustomField>