force-app/main/default/objects/Title_Detail__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>The jurisdiction within which the property is registered.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_ACT</fullName>
                <label>ACT</label>
            </value>
            <value>
                <fullName>STATE_NSW</fullName>
                <label>NSW</label>
            </value>
            <value>
                <fullName>STATE_NT</fullName>
                <label>NT</label>
            </value>
            <value>
                <fullName>STATE_QLD</fullName>
                <label>QLD</label>
            </value>
            <value>
                <fullName>STATE_SA</fullName>
                <label>SA</label>
            </value>
            <value>
                <fullName>STATE_TAS</fullName>
                <label>TAS</label>
            </value>
            <value>
                <fullName>STATE_VIC</fullName>
                <label>VIC</label>
            </value>
            <value>
                <fullName>STATE_WA</fullName>
                <label>WA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>