force-app/main/default/objects/Title_Detail__c/fields/Title_Reference__c.field-meta.xml
<CustomField>
    <fullName>Title_Reference__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Unique title reference for the property title in the jurisdiction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>