force-app/main/default/objects/Title_Detail__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>ce-sequence derived from the payload proto for GCP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>